--- a/templates/ecommerce.html
+++ b/templates/ecommerce.html
@@ -1,6 +1,12 @@
 {% extends "master.html" %}
 {% block title %}E Commerce{% endblock %}
-{% block meta %}{% endblock %}
+{% block meta %}
+
+     <meta name="description" content="Digitech Partner is emerging company in Ecommerce sector.We are proficient at developing an all-inclusive platform for your SEO friendly e-commerce shopping cart needs and its payment integration solutions. With its help, one can easily exhibit his product range on the World Wide Web." />
+
+<meta name="keywords" content="Open Source web development,Open Source,Professional,Professional Development,Web Design Gurgaon,Web Application,Dynamic Website,Static Website,Responsive Design,Responsive Website,Website,Website Development,Designing,Web Designing,Website Designing,Domain,Photography,Retouching,Domain Registration,CMS,ERP,Content,Content Writing,E Commerce,Print,Media,Print Media,Development,Digitech,Partner,Digitech Partner,Software,Software Development,Search,Search Engine,Search Engine Optimization,Social Marketing,Social,Social Media,SEO,SMO,Web,Support,Maintanance,Programming,Coding,Hosting,Outsourcing,Google Adsence,Gurgaon,Delhi,Company,Payment,Payment Gateway,Payment Gateway Integration,E-Commerce Website,E-commerce,E Commerce Solutions,solutions,Online Payment Integration,Shopping Cart,Gateway Integration" />
+
+{% endblock %}
 {% block css %}{% endblock %}
 {% block headerimage %}
   <div class="banner banner-template">
