--- a/templates/index.html
+++ b/templates/index.html
@@ -1,48 +1,64 @@
 {% extends "master.html" %}
 {% block title %}Home{% endblock %}
-{% block meta %}{% endblock %}
-{% block css %}{% endblock %}
+{% block meta %}
+    <meta name="description" content="Digitech Partner is emerging company in IT sector. Established in 2015 with extremely qualified and well experienced professionals who let your IT related queries solve with their intellectual, out of the box and mind blowing ideas.We ensures that the functioning of your systems is optimized with end user support and data center management. Our services includes cutting edge solutions to install and integrate hardware and software to manage complex IT implementation projects successfully." />
+
+<meta name="keywords" content="Web Design Gurgaon,Web Application,Dynamic Website,Static Website,Responsive Design,Responsive Website,Website,Website Development,Designing,Web Designing,Website Designing,Domain,Photography,Retouching,Domain Registration,CMS,ERP,Content,Content Writing,E Commerce,Print,Media,Print Media,Development,Digitech,Partner,Digitech Partner,Software,Software Development,Search,Search Engine,Search Engine Optimization,Social Marketing,Social,Social Media,SEO,SMO,Web,Support,Maintanance,Programming,Coding,Hosting,Outsourcing,Google Adsence,Gurgaon,Delhi,Company,Payment,Payment Gateway,Payment Gateway Integration,E-Commerce Website,E-commerce,E Commerce Solutions,solutions,Online Payment Integration,Shopping Cart,Gateway Integration" />
+
+{% endblock %}
+{% block css %}
+    <style>
+     .title:after {
+         background: #dc3c4b;
+     }
+    .middle-title:after {
+          background: #dc3c4b;
+    }
+
+
+    </style>
+{% endblock %}
 {% block headerimage %}
 
-    <div class="banner full-height-banner banner-type-3 business-slider" >
+    <div class="banner full-height-banner banner-type-3  gym-slider" >
             <div class="swiper-container full-height-slider"  data-autoplay="0" data-loop="1" data-speed="500" data-center="0" data-slides-per-view="1">
                 <div class="swiper-wrapper ">
                     <div class="swiper-slide full-height-slide" style="background-image: url('/static/img/custom-bg-12.jpg')">
                         <div class="overlay overlay-lg"></div>
                         <div class="center">
-                            <h1 class="slide-title">Welcome to sonic<br>
-                                excellent choice for business</h1>
-                            <div class="slider-sub-title">Sonic is best solution for your business, Responsive & Flexible,<br>
-                                You can present your business and services properly.</div>
+                            <h1 class="slide-title">Welcome to Digitech Partner<br>
+                             </h1>
+                            <div class="slider-sub-title">Website designing and development<br>
+                                We operate under two guiding principles: the delivery of cutting edge solutions; and always putting the customer first.</div>
                             <div class="button-row">
                                 <a class="button-type-4" href="#">MOre about us</a>
-                                <a class="button-type-5" href="#">check our features</a>
+                                <a class="button-type-5" href="#">check our services</a>
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide full-height-slide" style="background-image: url('/static/img/banner-img-9.jpg')">
                         <div class="overlay overlay-lg"></div>
                         <div class="center">
-                            <h2 class="slide-title">Welcome to sonic<br>
-                                excellent choice for business</h2>
-                            <div class="slider-sub-title">Sonic is best solution for your business, Responsive & Flexible,<br>
-                                You can present your business and services properly.</div>
+                            <h2 class="slide-title">Welcome to Digitech Partner<br>
+                             </h2>
+                            <div class="slider-sub-title">Leverging emerging technologies <br>
+                             in a disruptive technology environment .</div>
                             <div class="button-row">
                                 <a class="button-type-4" href="#">MOre about us</a>
-                                <a class="button-type-5" href="#">check our features</a>
+                                <a class="button-type-5" href="#">check our services</a>
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide full-height-slide" style="background-image: url('/static/img/banner-img-10.jpg')">
                         <div class="overlay overlay-lg"></div>
                         <div class="center">
-                            <h2 class="slide-title">Welcome to sonic<br>
-                                excellent choice for business</h2>
-                            <div class="slider-sub-title">Sonic is best solution for your business, Responsive & Flexible,<br>
-                                You can present your business and services properly.</div>
+                            <h2 class="slide-title">Welcome to Digitech Partner<br>
+                                </h2>
+                            <div class="slider-sub-title">24x7 Support & Maintenance,<br>
+                                We offer full support and maintenance services to our clients. problem and find the proper solution.</div>
                             <div class="button-row">
                                 <a class="button-type-4" href="#">MOre about us</a>
-                                <a class="button-type-5" href="#">check our features</a>
+                                <a class="button-type-5" href="#">check our services</a>
                             </div>
                         </div>
                     </div>
@@ -60,8 +76,7 @@
                 <div class="title-block">
                     <h2 class="title">Why Digitech Partner ?</h2>
                     <div class="sub-title">
-                        We are a creative agency with a passion for design & developing beautiful creations.
-                        We’ve had the privilege to work with some of the largest names
+                        Digitech Partner is your complete technology partner. We offer the perfect solutions for all of your IT problems and all of your IT aspirations; and we practice what we preach: service is everything.
                     </div>
                 </div>
                 <div class="row row-services">
@@ -116,17 +131,17 @@
                     <div class="col-sm-4 icon-style icon-style-3">
                         <span class="icon-presentation"></span>
                         <h3 class="middle-title middle-title_center"><span class="process-num">01.</span> make Plan</h3>
-                        <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiume aque ipsa quae ab illo.</p>
+                        <p>Planning is essential for most businesses and organizations. In practice, many people fail to plan their websites. Sometimes the ever-busy, dynamic nature of running a business is to blame; there are so many operational demands that proper time is not allotted to projects.</p>
                     </div>
                     <div class="col-sm-4  icon-style icon-style-3">
                         <span class=" icon-tools"></span>
                         <h3 class="middle-title middle-title_center"><span class="process-num">02.</span> development</h3>
-                        <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiume aque ipsa quae ab illo.</p>
+                        <p>The implementation of software design starts in terms of writing program code in the suitable programming language and developing error-free executable programs efficiently. The software is maintained timely by updating the code according to the changes taking place in user end environment or technology.</p>
                     </div>
                     <div class="col-sm-4  icon-style icon-style-3">
                         <span class="icon-circle-compass"></span>
-                        <h3 class="middle-title middle-title_center"><span class="process-num">03.</span> customer support</h3>
-                        <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiume aque ipsa quae ab illo.</p>
+                        <h3 class="middle-title middle-title_center"><span class="process-num">03.</span> support and maintenance</h3>
+                        <p>After your website is successfully launched, we will still be around to carry out any modifications or addition of new sections if required. We offer full support and maintenance services to our clients. problem and find the proper solution.</p>
                     </div>
                 </div>
             </div>
@@ -134,7 +149,7 @@
     <div class="info-section">
             <div class="container">
                 <h2 class="info-title">“stop dreaming start doing!”</h2>
-                <span class="info-sub-title">Weblionmedia - theme development Sonic</span>
+                <span class="info-sub-title">Perfect technology partner for all of your IT requirements</span>
             </div>
             <div class="clip">
                 <div class="bg bg-bg" style="background-image:url(/static/img/custom-bg-6.jpg)"></div>
@@ -167,7 +182,7 @@
                                 </div>
                                 <div class="progress-item">
                                     <div class="progress-name" >
-                                        Programming  - <span class="progress-to" data-to="50" data-speed="50">50</span>%
+                                        Programming  - <span class="progress-to" data-to="90" data-speed="50">90</span>%
                                     </div>
                                     <div class="progress-line">
                                         <span class="progress-line-current"></span>
@@ -175,7 +190,7 @@
                                 </div>
                                 <div class="progress-item">
                                     <div class="progress-name" >
-                                        Customer support - <span class="progress-to" data-to="70" data-speed="1000">70</span>%
+                                        Customer support - <span class="progress-to" data-to="95" data-speed="1000">95</span>%
                                     </div>
                                     <div class="progress-line">
                                         <span class="progress-line-current"></span>
@@ -185,7 +200,8 @@
                         </div>
                     <div class="col-sm-6 col-md-8">
                         <h3>About Us</h3>
-                        <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa quae ab illo veritatist quasi architecto beatae vitae dictaunt explicabo. Nemo enim ipsam voluptatem quia consequuntur magni dolores eos qui ratione </p>
+                        <p> Digitech Partner is emerging company in IT sector. Established in 2015 with extremely qualified and well experienced professionals who let your IT related queries solve with their intellectual, out of the box and mind blowing ideas. </p>
+                        <p>We ensures that the functioning of your systems is optimized with end user support and data center management. Our services includes cutting edge solutions to install and integrate hardware and software to manage complex IT implementation projects successfully.</p>
                     </div>
 
                 </div>
