--- a/templates/our-clients.html
+++ b/templates/our-clients.html
@@ -1,6 +1,11 @@
 {% extends "master.html" %}
 {% block title %}Our Clients{% endblock %}
-{% block meta %}{% endblock %}
+{% block meta %}
+    <meta name="description" content="Digitech Partner is emerging company in IT sector. Established in 2015 with extremely qualified and well experienced professionals who let your IT related queries solve with their intellectual, out of the box and mind blowing ideas.We ensures that the functioning of your systems is optimized with end user support and data center management. Our services includes cutting edge solutions to install and integrate hardware and software to manage complex IT implementation projects successfully." />
+
+<meta name="keywords" content="Open Source web development,Open Source,Professional,Professional Development,Web Design Gurgaon,Web Application,Dynamic Website,Static Website,Responsive Design,Responsive Website,Website,Website Development,Designing,Web Designing,Website Designing,Domain,Photography,Retouching,Domain Registration,CMS,ERP,Content,Content Writing,E Commerce,Print,Media,Print Media,Development,Digitech,Partner,Digitech Partner,Software,Software Development,Search,Search Engine,Search Engine Optimization,Social Marketing,Social,Social Media,SEO,SMO,Web,Support,Maintanance,Programming,Coding,Hosting,Outsourcing,Google Adsence,Gurgaon,Delhi,Company,Payment,Payment Gateway,Payment Gateway Integration,E-Commerce Website,E-commerce,E Commerce Solutions,solutions,Online Payment Integration,Shopping Cart,Gateway Integration" />
+
+{% endblock %}
 {% block css %}{% endblock %}
 {% block headerimage %}
   <div class="banner banner-template">
