--- a/templates/master.html
+++ b/templates/master.html
@@ -6,6 +6,7 @@
     <title>{% block title %}{% endblock %} | Digitech Partner</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <meta name="author" content="www.digitechpartner.com">
+ <meta name="google-site-verification" content="-YSQVebphcWN0h0OdNLCj1MTTbayjsoOkcRH0CBRzfM" />
     <meta name="description" content="Wedding Vendors, Venue,Parlor,Photographer,Jewlry,Lehnga, Saree, Sherwani,Watches and more @ theweddingshopp.com" />
 <meta name="keywords" content="Website,Website Development,Designing,Web Designing,Website Designing,Domain,Photography,Retouching,Domain Registration,CMS,ERP,Content,Content Writing,E Commerce,Print,Media,Print Media,Development,Digitech,Partner,Digitech Partner,Software,Software Development,Search,Search Engine,Search Engine Optimization,Social Marketing,Social,Social Media,SEO,SMO,Web,Support,Maintanance,Programming,Coding,Hosting,Outsourcing" />
 
@@ -39,7 +40,7 @@
 
 
 .copy-row {
-   
+
     padding-top: 2px;
 }
 </style>
