--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -37,8 +37,17 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-2" style="border:1px solid gray;">
-                            Ad Space
+                        <div class="col-sm-2" style="">
+                          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- sideadd -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4139762682405495"
+     data-ad-slot="6863441168"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                             </div>
 
                     </div>
