--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "master.html" %}
+{% load staticfiles %}
 {% block title %}Home{% endblock %}
 {% block meta %}
     <meta name="description" content="Digitech Partner is emerging company in IT sector. Established in 2015 with extremely qualified and well experienced professionals who let your IT related queries solve with their intellectual, out of the box and mind blowing ideas.We ensures that the functioning of your systems is optimized with end user support and data center management. Our services includes cutting edge solutions to install and integrate hardware and software to manage complex IT implementation projects successfully." />
@@ -226,89 +227,61 @@
                              <div class="swiper-slide">
                                  <div class="col-portfolio">
                                      <div class="portfolio-box">
-                                         <img src="/static/img/portfolio-1.jpg" alt="">
+                                         <img src="{% static 'appimg/wedding.JPG' %}" alt="Theweddingshopp.com">
                                          <a href="#" class="portfolio-link">
                                              <span class="plus"><i class="fa fa-plus"></i></span>
                                          </a>
                                      </div>
                                      <div class="portfolio-info">
-                                         <h3>project one</h3>
-                                         <span>Art, Bysiness</span>
+                                         <h3>theweddingshopp.com</h3>
+                                         <span>Online Wedding Site</span>
                                      </div>
                                  </div>
                              </div>
                              <div class="swiper-slide">
                                  <div class="col-portfolio" >
                                      <div class="portfolio-box">
-                                         <img src="/static/img/portfolio-3.jpg" alt="">
+                                         <img src="{% static 'appimg/invest.JPG' %}" alt="Investwizz.com">
                                          <a href="#" class="portfolio-link">
                                              <span class="plus"><i class="fa fa-plus"></i></span>
                                          </a>
                                      </div>
                                      <div class="portfolio-info">
-                                         <h3>project two</h3>
-                                         <span>Art, Bysiness</span>
+                                         <h3>investwizz.com</h3>
+                                         <span>Online Stock Details</span>
                                      </div>
                                  </div>
                              </div>
                              <div class="swiper-slide">
                                  <div class="col-portfolio" >
                                      <div class="portfolio-box">
-                                         <img src="/static/img/portfolio-2.jpg" alt="">
-                                         <a href="#" class="portfolio-link">
+                                         <img src="{% static 'appimg/apra.jpg' %}" alt="Apra Health Services">
+                                         <a href="http://www.aprahealthservices.org.in" rel="nofollow" class="portfolio-link">
                                              <span class="plus"><i class="fa fa-plus"></i></span>
                                              <span class="plus"><i class="fa fa-plus"></i></span>
                                          </a>
                                      </div>
                                      <div class="portfolio-info">
-                                         <h3>project three</h3>
-                                         <span>Art, Bysiness</span>
+                                         <h3>Apra Health Services</h3>
+                                         <span>Health Insurance Services</span>
                                      </div>
                                  </div>
                              </div>
                              <div class="swiper-slide">
                                  <div class="col-portfolio">
                                      <div class="portfolio-box">
-                                         <img src="/static/img/portfolio-1.jpg" alt="">
-                                         <a href="#" class="portfolio-link">
+                                         <img src="{% static 'appimg/imac.JPG' %}" alt="ImakeaChoice">
+                                         <a href="http://www.imakeachoice.com" rel="nofollow" class="portfolio-link">
                                              <span class="plus"><i class="fa fa-plus"></i></span>
                                          </a>
                                      </div>
                                      <div class="portfolio-info">
-                                         <h3>project one</h3>
-                                         <span>Art, Bysiness</span>
+                                         <h3>ImakeaChoice</h3>
+                                         <span>Paintings,Sculptures,Oil Paintings, Canvas</span>
                                      </div>
                                  </div>
                              </div>
-                             <div class="swiper-slide">
-                                 <div class="col-portfolio" >
-                                     <div class="portfolio-box">
-                                         <img src="/static/img/portfolio-3.jpg" alt="">
-                                         <a href="#" class="portfolio-link">
-                                             <span class="plus"><i class="fa fa-plus"></i></span>
-                                         </a>
-                                     </div>
-                                     <div class="portfolio-info">
-                                         <h3>project two</h3>
-                                         <span>Art, Bysiness</span>
-                                     </div>
-                                 </div>
-                             </div>
-                             <div class="swiper-slide">
-                                 <div class="col-portfolio" >
-                                     <div class="portfolio-box">
-                                         <img src="/static/img/portfolio-2.jpg" alt="">
-                                         <a href="#" class="portfolio-link">
-                                             <span class="plus"><i class="fa fa-plus"></i></span>
-                                             <span class="plus"><i class="fa fa-plus"></i></span>
-                                         </a>
-                                     </div>
-                                     <div class="portfolio-info">
-                                         <h3>project three</h3>
-                                         <span>Art, Bysiness</span>
-                                     </div>
-                                 </div>
-                             </div>
+
                          </div>
                          <div class="pagination pagination-hide"></div>
                      </div>
