--- a/templates/master.html
+++ b/templates/master.html
@@ -59,10 +59,10 @@
                 <div class="container">
                     <div class="nav-panel clearfix">
                          <a href="/index" class="logo">
-                            <img class="logo-light logo-standart" src="{% static "img/dp logo.png" %}" style="height:50px" alt="Digitech Partner" />
-                            <img class="logo-light logo-retina" src="{% static "img/dp logo.png" %}" style="height:50px" alt="Digitech Partner" />
-                              <img class="logo-dark logo-standart" src="{% static "img/dp logo.png" %}" style="height:50px" alt="Digitech Partner" />
-                            <img class="logo-dark logo-retina" src="{% static "img/dp logo.png" %}" style="height:50px" alt="Digitech Partner" />
+                            <img class="logo-light logo-standart" src="{% static "appimg/logowhite.png" %}" style="height:50px" alt="Digitech Partner" />
+                            <img class="logo-light logo-retina" src="{% static "appimg/logowhite.png" %}" style="height:50px" alt="Digitech Partner" />
+                              <img class="logo-dark logo-standart" src="{% static "appimg/logo.png" %}" style="height:50px" alt="Digitech Partner" />
+                            <img class="logo-dark logo-retina" src="{% static "appimg/logo.png" %}" style="height:50px" alt="Digitech Partner" />
                         </a>
                         <div class="info-panel">
                             <a class="search-icon" href="#"><i class="fa fa-search"></i></a>
